changed location of xChart Library

--- a/SensorPlot/nbproject/project.properties
+++ b/SensorPlot/nbproject/project.properties
@@ -35,9 +35,12 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/SensorPlot
 endorsed.classpath=
 excludes=
+file.reference.xchart-3.5.4.jar=lib/xchart-3.5.4/xchart-3.5.4.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.xchart-3.5.4.jar}:\
+    ${libs.XChart.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
